--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ packages = [{include = "ocr_server"}]
 python = "^3.11"
 django = "^4.2.3"
 djangorestframework = "^3.14.0"
+pillow = "^10.0.0"
+pytesseract = "^0.3.10"
+mysqlclient = "^2.2.0"
+pyuploadcare = "^4.1.0"
 
 
 [build-system]
